# local-athena

./: .gitignore  README.md  compose.yaml  notes  ports
.github/: dependabot.yml
cli/: browse.sh  init.sh  log.sh  postgres.sh  prepare_pg.sh  ps.sh  reset.sh  restart.sh  run_job.sh  shell.sh  start.sh  stop.sh  test.sh  trino.sh
client/: Cargo.toml
client/src/: main.rs
client_service/: Cargo.toml  Dockerfile
client_service/api/: Cargo.toml
client_service/crates/handlers/: Cargo.toml
client_service/crates/handlers/src/: execute_sql_async.rs  execute_sql_sync.rs  lib.rs
client_service/crates/looper/: Cargo.toml
client_service/crates/postgres/: Cargo.toml
client_service/crates/postgres/src/: error.rs  lib.rs
client_service/crates/trino/: Cargo.toml
client_service/crates/trino/src/: lib.rs  sample_request.rs
for_asahi/: create_table.sql  init_bucket.sh
for_sazae/: 0_init_bucket.sh
glue/spark/: core-site.xml
glue/workspace/job_workspace/src/: main.py
glue/workspace/jupyter_workspace/: setup_data.ipynb
glue_job_workspace/src/: exec.sh  main.py
hive-metastore/: Dockerfile  metastore-site.xml
jupyter_workspace/: CreateTableFromDataFrame.ipynb  Lab00_Setup.ipynb  Lab01-Athena.ipynb  Untitled.ipynb  sample.ipynb  setup_data.ipynb  takeuchi.ipynb
postgres/: prepare.sql
postgres/stored/: get_set_update_pending_task.sql  get_task.sql  set_insert_task.sql  set_update_task_result.sql
postgres/table/: tasks.sql
sample_data/for_asahi/: create_table.sql
sample_data/for_sazae/: 0_init_bucket.sh  create_table.sql
sample_data/sazae_data/input/: isono-family.csv
sazae_data/input/: isasaka-family.csv  namino-family.csv
trino/catalog/: minio.properties
web/: Cargo.toml  Dockerfile
web/api/: Cargo.toml
web/api/src/: main.rs
web/app/: Gemfile  app.rb
web/app/config/: puma.rb
web/app/lib/: trino.rb
web/app/lib/trino/: client.rb
web/crates/handlers/: Cargo.toml
web/crates/handlers/src/: check_job_status.rs  error.rs  execute_sql_async.rs  execute_sql_sync.rs  job_status.rs  lib.rs  root.rs
web/crates/looper/: Cargo.toml
web/crates/looper/src/: error.rs  lib.rs
web/crates/postgres/: Cargo.toml
web/crates/postgres/src/: error.rs  lib.rs
web/crates/trino/: Cargo.toml
web/crates/trino/src/: client.rs  error.rs  lib.rs  query_result.rs  sample_request.rs  simple_request.rs
web/src/: main.rs
web/src/api/: handler.rs  mod.rs
web/src/api/handlers/: check_job_status.rs  execute_sql_async.rs  execute_sql_sync.rs  mod.rs  root.rs
web/src/looper_task/: main.rs  mod.rs  postgres.rs
web/src/trino/: client.rs  mod.rs  simple_request.rs
