[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prusto = { git = "https://github.com/lapinChiro/prusto", features = ["presto"] }
serde = "=1.0.203"
axum = "0.7.2"
tokio = { version = "1.38.0", features = ["full"] }

