[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
tokio = { version = "1.39.3", features = ["full"] }
serde_json = "1.0.120"
anyhow = "1"
trino = { path = "../crates/trino" }
handlers = { path = "../crates/handlers" }
postgres = { path = "../crates/postgres" }
looper = { path = "../crates/looper" }