[package]
name = "handlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.203", features = ["derive"] }
axum = "0.7.6"
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.120"
postgres-types = { version = "0.2.4", features = [
    "derive",
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }
trino = { path = "../trino" }
postgres = { path = "../postgres" }
thiserror = "1.0.61"