[package]
name = "looper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.6"
serde_json = "1.0.120"
resident-utils = { version = "0.5", features = ["postgres"] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
trino = { path = "../trino" }
postgres = { path = "../postgres" }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
