[package]
name = "trino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prusto = { git = "https://github.com/lapinChiro/prusto", features = ["presto"] }
serde = { version = "^1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
