[package]
name = "looper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
serde_json = "1.0.117"
resident-utils = { version = "0.5", features = ["postgres"] }
anyhow = "1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
trino = { path = "../trino" }
postgres = { path = "../postgres" }